syntax = "proto3";
package airbloc.collections;

option go_package = "github.com/airbloc/airbloc-go/account/api";

import "proto/types.proto";

service Account {
    rpc Create(AccountCreateRequest) returns (AccountCreateResponse);
}

message AccountCreateRequest {
}

message AccountCreateResponse {
    airbloc.common.Hash accountId = 1;
}
